# casadi-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
casadi_tools/: dict_utils.py  math.py  types.py  units.py
casadi_tools/dynamics/: integrators.py  named_arrays.py  projector.py
casadi_tools/nlp_utils/: casadi_builder.py  nlp_elems.py  nlp_problem.py  nlp_runner.py
casadi_tools/simulation/: loggers.py  simulator.py
