[tool.poetry]
name = "casadi_tools"
version = "0.0.0"
description = "Framework for building optimization problems with Casadi"
authors = ["Firstname Lastname <username@domain.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.0"
typing-extensions = "^4.6.2"
casadi = {version="^3.6.3", optional=true}

[tool.poetry.extras]
casadi = ["casadi"]

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "^1.2.1"
black = "^22.6.0"
flake8 = "^5.0.4"
numpydoc = "^1.5.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
